fixed: too large buttons padding for mobile

--- a/plugins/Morpheus/stylesheets/ui/_buttons.less
+++ b/plugins/Morpheus/stylesheets/ui/_buttons.less
@@ -72,5 +72,12 @@ input[type="submit"].btn,
 }
 
 .btn, .btn-large, .btn-small, .btn-flat {
-    padding: 0 2rem;
+  padding: 0 2rem;
+  height: auto;
+}
+
+@media (max-width: 1199px) {
+  .btn, .btn-large, .btn-small, .btn-flat {
+    padding: 0 0.5em;
+  }
 }
